# BTax

./: .gitignore  .gitmodules  AssetTypeModel.cpp  BTax.code-workspace  Broker  Broker.cpp  Broker.h  Broker.py  BrokerManager.cpp  BrokerManager.h  CMakeCache.txt  CMakeLists.txt  CoinsModel.cpp  CoinsModel.h  Config.cpp  Config.h  DBLocal.cpp  DBLocal.h  DBRemote.cpp  DBRemote.h  DataItem.qml  DateSelector.qml  Deposit.cpp  Deposit.h  ExchangesModel.cpp  Host.cpp  Host.h  IconButton.qml  ImportOperationForm.qml  Init.qml  Makefile  MaterialTextInput.qml  NewAssetForm.qml  NewDepositForm.qml  NewOperationForm.qml  NewTransferForm.qml  Operation.cpp  Operation.h  Operation.qml  Operations.qml  (+30 more)
Broker_autogen/: moc_predefs.h
Docker/: docker-compose.yaml
Docker/MarketCap/: Dockerfile  README.md  main.py  requirements.txt
Docker/YFinance_API/: Dockerfile  README.md  app.py  requirements.txt
Docker/database/: docker-compose.yaml
Excalidraw/: Filters_Schema.excalidraw
IMarketData/: Coingecko.cpp  Coingecko.h  IMarketData.cpp  IMarketData.h  MarketDataFactory.cpp  MarketDataFactory.h  YFinance.cpp  YFinance.h
IfExchanges/: B2m.cpp  B2m.h  B2mV2.cpp  B2mV2.h  Binance.cpp  Binance.h  Cryptocom.cpp  Cryptocom.h  ExchangeFactory.cpp  ExchangeFactory.h  IExchange.cpp  IExchange.h  Importer.cpp  Importer.h  MarketDataFactory.h
Logger/: CMakeLists.txt  logger.c
Managers/: BrokerManager.cpp  CMakeLists.txt  SQLManager.cpp  SQLManager.h
Notifications/: AMessage.qml  NotificationManager.h
Test/: B2mTest  B2mTest.cpp  B2mV2Test  B2mV2Test.cpp  BinanceTest  BinanceTest.cpp  BrokerManagerTest.cpp  BrokerTest.cpp  ImporterTest  ImporterTest.cpp  SQLManagerTest  SQLManagerTest.cpp  Test_Utils.h  libLogger.dylib  runTests.sh  run_test.bat
Test/Files/: B2M.csv  B2MV2.csv  B2MV2_1.csv  B2MV2_2.csv  B2M_1.csv  Binance.csv  Binance_1.csv  summary-2022.csv
Validators/: VDate.cpp  VDate.h  VOperation.cpp
qml/: IconButton.qml  ImportOperationForm.qml  Init.qml  MaterialTextInput.qml  NewAssetForm.qml  NewDepositForm.qml  NewOperationForm.qml  NewTransferForm.qml  Operation.qml  Operations.qml  SchedulerBody.qml  Wallet.qml  WalletDataItem.qml  WalletsBody.qml  main.qml
release/: DEPLOY.md
release/appdir/: broker.desktop
src/: AssetTypeModel.cpp  AssetTypeModel.h  Broker.cpp  Broker.h  CMakeLists.txt  CoinsModel.h  Enumerations.cpp  Enumerations.h  ExchangesModel.cpp  ExchangesModel.h  Operation.cpp  Operation.h  OperationsModel.h  Reporter.cpp  Reporter.h  Statistics.h  UsersModel.h  Utils.cpp  Utils.h  Wallet.cpp  Wallet.h  WalletOperation.h  WalletsModel.cpp  WalletsModel.h  WalletsPercModel.cpp  WalletsPercModel.h  main.cpp  qml.qrc
src/.qt/: QtDeploySupport.cmake
src/Filters/: SelectionMultipleFilter.cpp  SelectionMultipleFilter.h
src/IMarketData/: Coingecko.cpp  Coingecko.h  IMarketData.h  YFinance.cpp
src/IfExchanges/: B2m.h  B2mV2.cpp  Binance.cpp  Cryptocom.cpp
src/Logger/: CMakeLists.txt  logger.c  logger.h
src/Managers/: BrokerManager.cpp  BrokerManager.h  SQLManager.cpp  SQLManager.h  WalletsFilterBarManager.cpp  WalletsFilterBarManager.h
src/Notifications/: AMessageDialog.qml  NotificationManager.cpp  NotificationManager.h
src/Validators/: VDate.cpp  VOperation.h  Validator.h
